--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -4,6 +4,7 @@
     align-items: center;
     font-size: 25px;
     margin-right: 20px;
+    margin-top: 4vh;
     cursor: pointer;
     text-decoration: none;
 }
