--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     height: 15vh;
-    border-bottom: 2px solid rgb(239, 184, 3);
+    background-color: white;
 }
 
 .navbar-logo {
@@ -22,8 +22,11 @@
 }
 
 .nav-menu {
+    width: 100%;
+    margin-top: 0;
     float: left;
     margin-right: 20px;
+    background-color: rgb(239, 184, 3);
 }
 .nav-item {
     display: inline-block;
